--- a/package.json
+++ b/package.json
@@ -20,7 +20,8 @@
     "gsap": "^3.13.0",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
-    "tailwindcss": "^4.1.11"
+    "tailwindcss": "^4.1.11",
+    "vercel": "^44.2.11"
   },
   "devDependencies": {
     "@eslint/js": "^9.29.0",
