--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "me",
-  "homepage": "https://junnn6ix.github.io/jun",
+  // "homepage": "https://junnn6ix.github.io/jun",
   "private": true,
   "version": "0.0.0",
   "type": "module",
